# cligpt

./: README.md  cligpt.py  mygpt.py  pyproject.toml
