[project]
name = "cligpt"
version = "0.1.0"
description = "A simple python script to interact with OpenAI's API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

# [tool.hatch.build.targets.wheel]
# packages = ["cligpt"]

# [project.scripts]
# cligpt = "cligpt:main"

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
